# python-project-structure

./: README.md  pyproject.toml
famousworkflow/: module_a.py
src/: setup.py
tests/: test_module_a.py
