[tool.poetry]
name = "my_fake_project"
version = "0.1.0"
description = ""
authors = ["Paul Storey <paul.storey@bodleian.ox.ac.uk>"]
packages = [
    { include = "package_a", from = "src" },
    ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
